macros/tests/unhappy/dup_skip_attr.test.stderr
error: duplicate `skip` attribute
 --> tests/unhappy/dup_skip_attr.test.rs:8:25
  |
8 |     #[wasm_export(skip, skip)]
  |                         ^^^^
